--- a/Hospitales/iHospitales/templates/medicos.html
+++ b/Hospitales/iHospitales/templates/medicos.html
@@ -11,7 +11,7 @@
   {% for medico in medicos %}
   <li>
 
-  {{ medico.id}} : <A HREF="./{{medico.id}}">{{medico.nombre}}</A>  : {{ medico.especialidad}}
+  {{ medico.id}} : <A HREF="./{{medico.id}}">{{medico.nombre}}</A>  : {{ medico.departamento}}
   </li>
   {% endfor %}
   </ul>
