--- a/Hospitales/iHospitales/templates/hospitales_detail.html
+++ b/Hospitales/iHospitales/templates/hospitales_detail.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{%extends "base.html" %}
+{% block content %}
   <h1>Hospital</h1>
   {% if hospital %}
 
@@ -52,5 +47,6 @@
   <p>No hay hospitales.</p>
   {% endif %}
 
-</body>
-</html>
+
+
+{% endblock %}
