--- a/Hospitales/iHospitales/templates/ingresos.html
+++ b/Hospitales/iHospitales/templates/ingresos.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
+{%extends "base.html" %}
+{% block content %}
     <title>Lista de ingresos</title>
 </head>
 <body>
@@ -15,8 +13,11 @@
   </li>
   {% endfor %}
   </ul>
+
+    <a href="/ingresos/put">Nuevo ingreso</a>
   {% else %}
-  <p>No hay medicos.</p>
+  <p>No hay ingresos.</p>
   {% endif %}
-</body>
-</html>
+
+
+{% endblock %}
