--- a/Hospitales/iHospitales/templates/ingresos_detail.html
+++ b/Hospitales/iHospitales/templates/ingresos_detail.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{%extends "base.html" %}
+{% block content %}
 <h1>Ingreso</h1>
   {% if ingresos %}
   <ul>
@@ -16,5 +11,5 @@
 {% else %}
   <p>El ingreso no existe.</p>
 {% endif %}
-</body>
-</html>
+
+      {% endblock %}
