--- a/Hospitales/iHospitales/templates/medicos_detail.html
+++ b/Hospitales/iHospitales/templates/medicos_detail.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{%extends "base.html" %}
+{% block content %}
  <h1>Medico</h1>
   {% if medico %}
   <ul>
@@ -26,5 +21,4 @@
   <p>No existe el medico.</p>
   {% endif %}
 
-</body>
-</html>
+{% endblock %}
