--- a/Hospitales/iHospitales/templates/pacientes.html
+++ b/Hospitales/iHospitales/templates/pacientes.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>ListaPacientes</title>
-</head>
-<body>
+{%extends "base.html" %}
+{% block content %}
   <h1>Lista de Pacientes</h1>
   {% if pacientes %}
   <ul>
@@ -21,5 +16,4 @@
 
 
 
-</body>
-</html>
+{% endblock %}
