--- a/Hospitales/iHospitales/templates/pacientes_detail.html
+++ b/Hospitales/iHospitales/templates/pacientes_detail.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
   <h1>Paciente</h1>
   {% if paciente %}
   <ul>
@@ -38,5 +34,4 @@
   <p>No hay paciente.</p>
   {% endif %}
 
-</body>
-</html>
+{% endblock %}
