--- a/Hospitales/iHospitales/templates/hospitales.html
+++ b/Hospitales/iHospitales/templates/hospitales.html
@@ -1,18 +1,34 @@
 {%extends "base.html" %}
 {% block content %}
-  <h1>Lista de Hospitales</h1>
-  {% if hospitales %}
-  <ul>
-  {% for hospital in hospitales %}
-  <li>
+   <tr>
+    <th><h1>Lista de Hospitales</h1></th>
+   </tr>
+<table  bgcolor="#f5f5f5" align="center">
 
-  <A HREF="./{{hospital.codigo_hospital}}">{{hospital.nombre}}</A>  - {{ hospital.ciudad}}
-  </li>
+  {% if hospitales %}
+    <tr >
+        <th>Nombre</th>
+        <th>Localidad</th>
+    </tr>
+
+  {% for hospital in hospitales %}
+
+    <tr align="center">
+         <td><A HREF="./{{hospital.codigo_hospital}}">{{hospital.nombre}}</A></td>
+
+        <td> {{ hospital.ciudad}}</td>
+
+    </tr>
   {% endfor %}
-  </ul>
+
   {% else %}
-  <p>No hay hospitales.</p>
+      <tr><td>
+        <p>No hay hospitales.</p>
+      </td>
+      </tr>
+
   {% endif %}
 
 
+</table>
 {% endblock %}
