HTML mejorados, falta mejorar diseño

--- a/Hospitales/iHospitales/templates/ingresos_detail.html
+++ b/Hospitales/iHospitales/templates/ingresos_detail.html
@@ -14,7 +14,7 @@
 
             </tr>
         <tr>
-            <td>Nombre</td>
+            <td>Nombre del paciente</td>
              <td> <A href="/pacientes/{{ingresos.paciente.dni}}">{{ingresos.paciente}} </A></td>
         </tr>
 
