--- a/Hospitales/iHospitales/templates/pacientes_detail.html
+++ b/Hospitales/iHospitales/templates/pacientes_detail.html
@@ -1,37 +1,86 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Paciente</h1>
+
   {% if paciente %}
-  <ul>
-      <h2>
-         {{paciente.dni}} : {{paciente.nombre}}: {{paciente.edad}}: {{paciente.ciudad}}
-    </h2>
-  </li>
-    <h3>Lista de medicos que han tratado al paciente</h3>
+
+
+      <tr>
+        <th colspan="3"><h1>Paciente {{ paciente.nombre }}</h1></th>
+      </tr>
+
+    <tr >
+    <td width="25%">DNI</td>
+    <td width="25%">{{paciente.dni}}</td>
+    </tr>
+    <tr>
+    <td>Nombre</td>
+    <td>{{paciente.nombre}}</td>
+    </tr>
+    <tr>
+    <td>Edad</td>
+    <td>{{paciente.edad}}</td>
+    </tr>
+    <tr>
+    <td>Ciudad</td>
+    <td>{{paciente.ciudad}}</td>
+    </tr>
+
+<tr>
+<td colspan="3">
+
+
+      <table width="25%" bgcolor="#e0e0e0" align="right">
+      <tr>
+        <th> Lista de medicos que han tratado al paciente</th>
+      </tr>
+
 
       {% if  medicos %}
   {% for medico in medicos %}
-      <ul>
-      <A HREF="/medicos/{{medico.codigo_medico}}">{{medico.nombre}}</A>
-      </ul>
+
+      <tr>
+      <td><A HREF="/medicos/{{medico.codigo_medico}}">{{medico.nombre}}</A></td>
+      </tr>
+
+
    {% endfor %}
 {% else %}
-  <p>El paciente no ha sido tratado por ningun medico..</p>
+          <tr><td>
+  <p>El paciente no ha sido tratado por ningun medico.</p>
+          </td></tr>
 {% endif %}
-      <h3>Lista de hospitales donde ha sido ingresado el paciente</h3>
+      </table>
+      </td>
+</tr>
+<tr><td colspan="3">
+      <table width="25%" bgcolor="#e0e0e0" align="right">
+      <tr>
+      <th>Lista de hospitales donde ha sido ingresado el paciente</th>
+      </tr>
+
       {% if  hospitales %}
   {% for hospital in hospitales %}
-      <ul>
-      <A HREF="/hospitales/{{hospital.codigo_hospital}}">{{hospital.nombre}}</A>
-      </ul>
+        <tr>
+            <td><A HREF="/hospitales/{{hospital.codigo_hospital}}">{{hospital.nombre}}</A></td>
+
+        </tr>
+
+
    {% endfor %}
 {% else %}
-  <p>El paciente no ha sido ingresado en ningun hospital.</p>
+          <tr>
+ <td> <p>El paciente no ha sido ingresado en ningun hospital.</p></td>
+          </tr>
 {% endif %}
-  </ul>
-  {% else %}
-  <p>No hay paciente.</p>
-  {% endif %}
+</table>
+</td>
+</tr>
 
+  {% else %}
+      <tr>
+    <td></ts><p>No se ha encontrado paciente.</p></td>
+      </tr>
+  {% endif %}
+</table>
 {% endblock %}
