HTML mejorados, falta mejorar diseño 2.0

--- a/Hospitales/iHospitales/templates/hospitales.html
+++ b/Hospitales/iHospitales/templates/hospitales.html
@@ -14,7 +14,7 @@
   {% for hospital in hospitales %}
 
     <tr align="center">
-         <td><A HREF="./{{hospital.codigo_hospital}}">{{hospital.nombre}}</A></td>
+         <td colspan="1" width="25%"><A HREF="./{{hospital.codigo_hospital}}">{{hospital.nombre}}</A></td>
 
         <td> {{ hospital.ciudad}}</td>
 
