--- a/Hospitales/iHospitales/templates/ingresos.html
+++ b/Hospitales/iHospitales/templates/ingresos.html
@@ -1,7 +1,7 @@
 {%extends "base.html" %}
 {% block content %}
     <tr>
-    <th colspan="3"><h1>Lista de ingresos</h1></th>
+    <th colspan="3" width="75%"><h1>Lista de ingresos</h1></th>
     </tr>
 
     <tr>
