Listo para entrega 1, BORRAR BBDD

--- a/Hospitales/iHospitales/templates/medicos.html
+++ b/Hospitales/iHospitales/templates/medicos.html
@@ -16,7 +16,7 @@
     <tr>
         <td> {{ medico.codigo_medico}}</td>
 
-          <td>  <A HREF="./{{medico.codigo_medico}}">{{medico.nombre}}</A> </td>
+          <td>  <A HREF="/medicos/{{medico.codigo_medico}}">{{medico.nombre}}</A> </td>
      <td>{{ medico.departamento}}</td>
     </tr>
 
