Forms Create Paciente - Ingreso + HTML

--- a/Hospitales/iHospitales/templates/ingresos.html
+++ b/Hospitales/iHospitales/templates/ingresos.html
@@ -28,5 +28,12 @@
   {% endif %}
 
 </tr>
+</table>
 
+    <tr>
+        <td>
+             <A HREF="/ingreso/create">Nuevo Ingreso</A>
+        </td>
+
+    </tr>
 {% endblock %}
