--- a/Hospitales/iHospitales/templates/pacientes.html
+++ b/Hospitales/iHospitales/templates/pacientes.html
@@ -30,6 +30,18 @@
        </tr>
   {% endif %}
 
+
+
+
+
+
 </table>
 
+
+        <tr>
+        <td align="right">
+             <A HREF="/paciente/create">Nuevo Paciente</A>
+        </td>
+
+    </tr>
 {% endblock %}
