Forms Edit Paciente + Ingreso + HTML

--- a/Hospitales/iHospitales/templates/ingresos_detail.html
+++ b/Hospitales/iHospitales/templates/ingresos_detail.html
@@ -33,7 +33,7 @@
       <td>{{ingresos.sintomas}}</td>
         </tr>
 </table>
-
+    <a HREF="/ingresos/{{ingresos.codigo_ingreso}}/edit/"> Editar Ingreso</a>
 {% else %}
   <p>El ingreso no existe.</p>
 {% endif %}
