--- a/Hospitales/iHospitales/templates/home.html
+++ b/Hospitales/iHospitales/templates/home.html
@@ -35,5 +35,10 @@
         <td width="30%"><a href="/api/ingresos.json" >lista ingresos Json</a></td>
         <td width="30%"> <a href="/api/ingresos.xml" >lista ingresos Xml</a></td>
     </tr>
+	<tr align="center" colspan="2">
+	<td align="center" colspan="2"><a href="/api">API RestFramework</a></td>
+	</tr>
+
+
     </table>
 {% endblock %}
