--- a/Hospitales/iHospitales/templates/base.html
+++ b/Hospitales/iHospitales/templates/base.html
@@ -1,7 +1,10 @@
 {% load staticfiles %}
 <html>
   <head>
-  <title>{{ titlehead}}</title>
+      <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+      <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+      <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+      <title>{{ titlehead}}</title>
   </head>
 <body>
 <table style="width:100%">
