Añadido Pais al Paciente

--- a/Hospitales/iHospitales/templates/pacientes_detail.html
+++ b/Hospitales/iHospitales/templates/pacientes_detail.html
@@ -25,6 +25,11 @@
     <td>Ciudad</td>
     <td>{{paciente.ciudad}}</td>
     </tr>
+    <tr>
+    <td>Pais</td>
+    <td>{{paciente.pais}}</td>
+    </tr>
+
 
 <tr>
 <td colspan="3">
